--- a/Deploy/Dockerfile
+++ b/Deploy/Dockerfile
@@ -6,11 +6,7 @@ COPY . .
 RUN CGO_ENABLED=0 go build -o /go/bin/proglog ./cmd/proglog
 # END: beginning
 # START_HIGHLIGHT
-RUN GRPC_HEALTH_PROBE_VERSION=v0.3.2 && \
-    wget -qO/go/bin/grpc_health_probe \
-    https:#github.com/grpc-ecosystem/grpc-health-probe/releases/download/\
-    ${GRPC_HEALTH_PROBE_VERSION}/grpc_health_probe-linux-amd64 && \
-    chmod +x /go/bin/grpc_health_probe
+RUN GRPCHEALTHPROBEVERSION="v0.3.2" && wget -qO /go/bin/grpc_health_probe "https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/${GRPCHEALTHPROBEVERSION}/grpc_health_probe-linux-amd64" && chmod +x /go/bin/grpc_health_probe
 # END_HIGHLIGHT
 FROM scratch
 COPY --from=build /go/bin/proglog /bin/proglog
